2006-07-09 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/noding/SegmentStringTest.cpp: removed
	unecessary zero-to-void-pointer casts.
	* tests/unit/noding/SegmentNodeTest.cpp: added new test suite
	* tests/unit/noding/SegmentPointComparatorTest.cpp: added
	new test suite (template, tests cases will be added)
	* tests/unit/Makefile.am: added new unit test files

2006-07-08 Sandro Santilli <strk@refractions.net>

	* configure.in: incremented CAPI minor version, to avoid
	falling behind any future version from the 2.2. branch.
	* source/geom/Geometry.cpp, source/geom/GeometryFactory.cpp,
	source/geomgraph/EdgeRing.cpp,
	source/headers/geos/geom/Geometry.h,
	source/headers/geos/geom/GeometryFactory.h,
	source/headers/geos/geom/GeometryFactory.inl,
	source/headers/geos/geomgraph/EdgeRing.h:
	updated doxygen comments (sync with JTS head).
	* source/headers/geos/platform.h.in: include <inttypes.h>
	rather then <stdint.h>

2006-07-07 Mateusz Loskot <mateusz@loskot.net>

	* macros/geos.m4: Fixed versions comparison in
	the GEOS_UNIT macro.

2006-07-07 Sandro Santilli <strk@refractions.net>

	* acsite.m4: include <inttypes.h> rather then <stdint.h>
	(the latter is not available on Solaris 9)
	* configure.in: make sure CFLAGS is set before compiling
	using the 64bit integer detection macro.
	

2006-07-06 Mateusz Loskot <mateusz@loskot.net>

	* macros/geos.m4: Fixed version query regexp with escaped
	dots. Removed -lpq from GEOS_LIBS flags.

2006-07-06 Mateusz Loskot <mateusz@loskot.net>

	* macros/geos.m4: Removed redundant -L and -I
	from GEOS_LIBS and GEOS_CFLAGS.

2006-07-06 Mateusz Loskot <mateusz@loskot.net>

	* macros/geos.m4: Fixed GEOS_INIT to support full paths to
	geos-config passed to --with-geos. Fixed version decoding. 

2006-07-05 Sandro Santilli <strk@refractions.net>

	* tests/unit/Makefile.am: distribute utility.h.
	* configure.in, tests/Makefile.am, tests/tut/Makefile.am:
	distribute the TUT framework.